src/objects/FDPApproval__c.object
<CustomObject>
    <description>Out going object for term approval date and graduation date.</description>
    <fields>
        <fullName>CUregistered__c</fullName>
        <description>total approved number of CU</description>
        <label>CUregistered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CatalogTerm__c</fullName>
        <description>The catalog term of the program that the student is enrolling in.</description>
        <label>Catalog Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedTerm__c</fullName>
        <description>total number of completed terms</description>
        <label>Completed Terms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GraduationDate__c</fullName>
        <description>expected graduation date</description>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorNotes__c</fullName>
        <defaultValue>&quot;Approved via FDP&quot;</defaultValue>
        <description>Notes for the mentor when they approve of a term/plan for enrollment.</description>
        <label>Mentor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <description>The program code for the student</description>
        <label>Program Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student associated with this approval.</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FDP Approvals</relationshipLabel>
        <relationshipName>FDPApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermNumber__c</fullName>
        <description>The term number which the mentor is approving.</description>
        <label>Term Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTerms__c</fullName>
        <description>total number of terms including completed, current and future.</description>
        <label>Total Terms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsedForEnrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this approval was used for enrolling the student in a term.</description>
        <label>Used For Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <label>FDP Approval</label>
    <nameField>
        <label>TermCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FDP Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>